# FFXIVTools

./: .dockerignore  .eslintignore  .eslintrc  .gitignore  .gitmodules  .prettierrc  00c6d01e3f6bb740.wasm  0bcafc51c876d040.wasm  14af02630524086c.wasm  17919b5de52bc5f5.wasm  2.js  201cfe865c3dd4d2.wasm  2719891c0696acfa.wasm  3.js  314.js  315.js  329500a0c41bb152.wasm  33d3938b1e2c0fc6.wasm  341427a1eba0248c.wasm  4048d8354401d1c6.wasm  4167a14e4ccdd2d5.wasm  41fa157cdcde0fe0.wasm  4383d3d14baacf88.wasm  4d4947845c34609a.wasm  510971c126ab6992.wasm  51f1f321f640e784.wasm  526.js  57972ed14605a830.wasm  652a6e55d4442f64.wasm  6af7ae605c1b9976.wasm  866f83b4189e1e2c.wasm  8b381692093cb832.wasm  9aada046d3943164.wasm  9db588e52726c1b3.wasm  CNAME  Cargo.toml  Dockerfile  Dockerfile.client  Dockerfile.server  LICENSE  (+31 more)
app/native/: Cargo.toml  build.rs
app/native/src/: lib.rs
client/common/: Cargo.toml  common.ts
client/common/src/: lib.rs  wasm_package.rs
client/explorer/: Cargo.toml  explorer.html  explorer.less  explorer.ts
client/explorer/src/: app.rs  context.rs  file_list.rs  filelistview.rs  lib.rs  treeview.rs
client/explorer/src/components/: content.rs  content_component.rs  file_list.rs  file_list_component.rs  mod.rs  tree.rs  tree_component.rs
client/explorer/src/view/: content_view.rs  file_list_view.rs  mod.rs  tree_view.rs
client/model_viewer/: Cargo.toml  model_viewer.ts
client/model_viewer/src/: app.rs  content.rs  lib.rs
client/translation_compare/: Cargo.toml  translation_compare.html
client/translation_compare/src/: app.rs  lib.rs  list.rs
ffxiv/ffxiv-parser/: Cargo.toml
ffxiv/ffxiv-parser/src/: lib.rs
ffxiv/ffxiv-parser/src/ex/: exl.rs  mod.rs
ffxiv/ffxiv-parser/tests/: exl_test.rs
ffxiv/ffxiv_parser/: Cargo.toml
ffxiv/ffxiv_parser/src/: ex.rs  lib.rs  lvb.rs  util.rs
ffxiv/ffxiv_parser/src/ex/: definition.rs  ex_row.rs  exd.rs  (+2 more)
ffxiv/ffxiv_parser/tests/: exd_test.rs  exl_test.rs  lvb_test.rs
ffxiv/model_viewer/: Cargo.toml
ffxiv/model_viewer/src/: main.rs
ffxiv/sqpack_reader/: Cargo.toml
ffxiv/sqpack_reader/src/: archive_id.rs  file_provider.rs  lib.rs  package.rs  raw_file.rs  reference.rs  sqpack_reader.rs  sqpack_reader_file.rs
ffxiv/sqpack_reader/tests/: read_as_compressed_test.rs  read_file_test.rs  read_test.rs  read_test_file.rs
libs/ffxiv_ex/: Cargo.toml
libs/ffxiv_ex/src/: action.rs  bnpcname.rs  craftaction.rs  enpcresident.rs  item.rs  lib.rs  placename.rs  quest.rs
libs/ffxiv_ex/tests/: classjob_test.rs
libs/ffxiv_model/: .gitignore  Cargo.toml  build.rs
libs/ffxiv_model/shaders/: character.frag  character.wgsl  frag_common.glsl  frag_common.wgsl  hair.frag  hair.wgsl  iris.frag  iris.wgsl  shader.frag  shader.vert  skin.frag  skin.wgsl  vertex.wgsl
libs/ffxiv_model/src/: character.rs  character_equipment_part.rs  character_part.rs  constants.rs  context.rs  customization.rs  equipment.rs  lib.rs  material.rs  model_read_context.rs  model_reader.rs  shader_holder.rs  texture_cache.rs  type_adapter.rs
libs/ffxiv_parser/: Cargo.toml
libs/ffxiv_parser/src/: eqdp.rs  ex.rs  ffxiv_string.rs  lgb.rs  lib.rs  lvb.rs  mdl.rs  mtrl.rs  pap.rs  pbd.rs  sklb.rs  stm.rs  tex.rs
libs/ffxiv_parser/tests/: eqdp_test.rs  exd_test.rs  exl_test.rs  lgb_test.rs  lvb_test.rs  mdl_test.rs  mtrl_test.rs  pap_test.rs  pbd_test.rs  sklb_test.rs  stm_test.rs  string_test.rs  tex_test.rs
libs/ffxiv_renderer/: Cargo.toml
libs/ffxiv_renderer/src/: lib.rs  main.rs  shader.frag
libs/havok_parser/: Cargo.toml
libs/havok_parser/src/: animation.rs  animation_binding.rs  animation_container.rs  binary_tag_file_reader.rs  byte_reader.rs  lib.rs  object.rs  skeleton.rs  spline_compressed_animation.rs  transform.rs
libs/havok_parser/tests/: animation_test.rs  read_test.rs  skeleton_test.rs
libs/renderer/: Cargo.toml
libs/renderer/src/: buffer.rs  buffer_pool.rs  camera.rs  lib.rs  material.rs  mesh.rs  model.rs  render_context.rs  render_target.rs  renderable.rs  renderer.rs  scene.rs  shader.rs  texture.rs  uniform_buffer.rs  vertex_format.rs
libs/sqpack_extension/: Cargo.toml
libs/sqpack_extension/src/: batchable_package.rs  batched_package.rs  extracted_file_provider.rs  extracted_raw_file.rs  lib.rs  sqpack_reader_extracted_file.rs
libs/sqpack_extension/tests/: read_as_compressed_test.rs  read_file_test.rs  read_files_test.rs
libs/sqpack_reader/: Cargo.toml
libs/sqpack_reader/src/: archive_id.rs  batched_package.rs  error.rs  extracted_file_provider.rs  lib.rs  package.rs  raw_file.rs  reference.rs  sqpack_reader.rs  sqpack_reader_extracted_file.rs
libs/sqpack_reader/tests/: read_as_compressed_test.rs  read_file_test.rs  read_files_test.rs  read_test.rs
libs/util/: Cargo.toml
libs/util/src/: lib.rs  parse_ext.rs  read_ext.rs  slice_ext.rs  str_ext.rs
pages/translation_compare/: Cargo.toml
renderer/: Cargo.toml
renderer/src/: lib.rs
server/: Cargo.toml  Dockerfile  Dockerfile.builder  Dockerfile.init
server/src/: context.rs  ffxiv_data.rs  main.rs  tex.rs
server/src/ffxiv_data/: context.rs
sqpack/: Cargo.toml
sqpack/src/: lib.rs  package.rs  sqpack.rs
sqpack/src/common/: archive_id.rs  block.rs  decoder.rs  mod.rs  raw_file.rs  util.rs
sqpack/src/sqpack/: archive.rs  archive_container.rs  archive_id.rs  data.rs  definition.rs  ext.rs  index.rs  mod.rs  parser.rs  reference.rs  sqpack.rs
sqpack/src/sqpack_file/: file_provider.rs  file_provider_file.rs  mod.rs
sqpack/tests/: sqpack_file_read_test.rs  sqpack_read_test.rs
tools/model_viewer_standalone/: Cargo.toml
tools/model_viewer_standalone/src/: main.rs
tools/sqpack_extractor/: Cargo.toml
tools/sqpack_extractor/src/: main.rs
util/: Cargo.toml
util/src/: lib.rs  parse_ext.rs  read_ext.rs  slice_ext.rs  str_ext.rs
utils/ffxiv_renderer_standalone/: Cargo.toml
utils/sqpack_extractor/: Cargo.toml
web/translation_compare/: Cargo.toml  translation_compare.ts
web/translation_compare/src/: app.rs  lib.rs  list.rs
web/web_common/: Cargo.toml
web/web_common/src/: lib.rs  wasm_package.rs  web_package.rs
(+105 files in other folders)
