[workspace]
members = [
    "libs/sqpack_extension",
    "libs/ffxiv_ex",
    "libs/ffxiv_parser",
    "libs/ffxiv_model",
    "libs/util",
    "libs/havok_parser",
    "tools/sqpack_extractor",
    "tools/model_viewer_standalone",
    "web/model_viewer",
    "web/translation_compare",
    "web/web_common",
    "server",
]

[profile.release]
panic = "abort"
lto = true
