[workspace]
members = [
    "libs/sqpack_extension",
    "libs/ffxiv_ex",
    "libs/ffxiv_parser",
    "libs/ffxiv_model",
    "libs/util",
    "libs/havok_parser",
    "tools/sqpack_extractor",
    "tools/model_viewer_standalone",
    "client/model_viewer",
    "client/translation_compare",
    "client/common",
    "server",
]

[profile.release]
panic = "abort"
lto = true
