[package]
name = "server"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2018"

[features]
default = []

[dependencies]
rocket = { version = ">=0.5.0-rc.1", default-features = false }
futures = { version = "^0.3", default-features = false }
itertools = { version = "^0.10", features = ["use_std"], default-features = false }
log = { version = "^0.4", default-features = false }
pretty_env_logger = { version = "^0.4", default-features = false }
serde_json = {version = "^1.0", features = ["alloc"], default-features = false }
serde = { version = "^1.0", default-features = false }

ffxiv_parser = { version = "^0.1", default-features = false, path = "../libs/ffxiv_parser" }
sqpack_extension = { version = "^0.1", features = ["std"], path = "../libs/sqpack_extension" }
sqpack = { version = "^0.1", git = "https://github.com/dlunch/sqpack" }
