[package]
name = "server"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2021"

[dependencies] 
futures = { version = "^0.3" }
itertools = { version = "^0.10" }
log = { version = "^0.4" }
pretty_env_logger = { version = "^0.4" }
tokio = { version = "^1.0", features = ["full"] }
axum = { version = "^0.5", features = ["headers"] }
chrono = { version = "^0.4" }
tower-http = { version = "0.3", features = ["cors", "set-header"] }
http = { version = "^0.2" }
hyper = { version = "^0.14" }
serde = { version = "^1.0" }
serde_json = { version = "^1.0" }
anyhow = { version = "^1.0" }

ffxiv_parser = { version = "^0.1", default-features = false, path = "../libs/ffxiv_parser" }
sqpack_extension = { version = "^0.1", features = ["std"], path = "../libs/sqpack_extension" }
sqpack = { version = "^0.1", git = "https://github.com/dlunch/sqpack" }
