[package]
name = "server"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2024"

[dependencies]
futures = { version = "^0.3" }
itertools = { version = "^0.10" }
log = { version = "^0.4" }
pretty_env_logger = { version = "^0.4" }
tokio = { version = "^1.0", features = ["full"] }
axum = { version = "^0.5", features = ["headers"] }
chrono = { version = "^0.4" }
tower-http = { version = "0.3", features = ["cors", "set-header", "catch-panic"] }
tower = { version = "^0.4" }
http = { version = "^1.3" }
hyper = { version = "^0.14" }
serde = { version = "^1.0" }
serde_json = { version = "^1.0" }
anyhow = { version = "^1.0" }
image = { version = "^0.24", default-features = false, features = ["png"] }

ffxiv_parser = { version = "^0.1", path = "../libs/ffxiv_parser" }
sqpack_extension = { version = "^0.1", features = ["std"], path = "../libs/sqpack_extension" }
sqpack = { version = "^0.1", git = "https://github.com/dlunch/sqpack" }
util = { version = "^0.1", path = "../libs/util" }
