[package]
name = "sqpack"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2018"

[features]
default = ["nom", "crc32fast", "phf", "compression", "byteorder", "std", "bytes"]
std = ["nom/std", "crc32fast/std", "compression/std", "byteorder/std", "tokio", "async-trait", "reqwest/default-tls"]

[dependencies]
nom = { version = "^5.1", features = ["alloc"], default-features = false, optional = true }
crc32fast = { version = "^1.2.0", default-features = false, optional = true }
phf = { version = "^0.8.0", features = ["macros"], default-features = false, optional = true }
compression = { version = "^0.1", features = ["deflate"], default-features = false, optional = true }
byteorder = { version = "^1.3.4", default-features = false, optional = true }
tokio = { version = "^0.2.11", features = ["fs", "macros", "rt-threaded", "sync"], default-features = false, optional = true }
async-trait = { version = "^0.1.24", default-features = false, optional = true }
reqwest = { version = "^0.10", default-features = false, optional = true }
bytes = { version = "^0.5", default-features = false, optional = true }
