[package]
name = "native"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2021"

[lib]
doctest = false
crate-type = ["cdylib"]

[features]
electron = []

[dependencies]
napi = { version = "^2.3" }
napi-derive = { version = "^1.0" }

[build-dependencies]
napi-build = { version = "^1.0" }