[package]
name = "native"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2024"

[lib]
doctest = false
crate-type = ["cdylib"]

[features]
electron = []

[dependencies]
napi = { version = "^2.16" }
napi-derive = { version = "^2.16" }

[build-dependencies]
napi-build = { version = "^2.1" }
