[package]
name = "common"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2024"

[lib]
doctest = false

[features]

[dependencies]
async-trait = { version = "^0.1.24", default-features = false }
wasm-bindgen = { version = "^0.2", default-features = false }
wasm-bindgen-futures = { version = "^0.4", default-features = false }
js-sys = { version = "^0.3", default-features = false }
gloo-timers = { version = "^0.3", features = ["futures"], default-features = false }

sqpack = { version = "^0.1", default-features = false, git = "https://github.com/dlunch/sqpack" }
sqpack_extension = { version = "^0.1", path = "../../libs/sqpack_extension" }
ffxiv_parser = { version = "^0.1", path = "../../libs/ffxiv_parser" }
