[package]
name = "explorer"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2018"

[lib]
doctest = false
crate-type = ["cdylib"]

[features]

[dependencies]
yew = { version = "0.17", features = ["web_sys"], default-features = false  }
wasm-bindgen = { version = "^0.2", default-features = false }
web-sys = { version = "^0.3", features = ["console"], default-features = false }
wee_alloc = { version = "^0.4", default-features = false }
console_error_panic_hook = { version = "^0.1", default-features = false }
console_log = { version = "0.2", features = ["color"], default-features = false }
log = { version = "0.4", default-features = false }

common = { version = "^0.1", path = "../common" }

[dev-dependencies]