[package]
name = "model_viewer"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2021"

[lib]
doctest = false
crate-type = ["cdylib"]

[features]

[dependencies]
yew = { version = "0.18", features = ["web_sys"], default-features = false  }
wasm-bindgen = { version = "^0.2", default-features = false }
wasm-bindgen-futures = { version = "^0.4", default-features = false }
web-sys = { version = "^0.3", features = ["console"], default-features = false }
wee_alloc = { version = "^0.4", default-features = false }
console_error_panic_hook = { version = "^0.1", default-features = false }
winit = { version = "^0.25", features = ["web-sys"], default-features = false }
log = { version = "0.4", default-features = false }
console_log = { version = "0.2", features = ["color"], default-features = false }
nalgebra = { version = "^0.29" }
hashbrown = { version = "^0.11"}

eng = { version = "^0.1", git = "https://github.com/dlunch/eng" }
common = { version = "^0.1", path = "../common" }
ffxiv_model = { version = "^0.1", path = "../../libs/ffxiv_model" }
util = { version = "^0.1", path = "../../libs/util" }

[dev-dependencies]
wasm-bindgen-test = { version = "^0.3", default-features = false }
futures = { version = "^0.3", default-features = false }
js-sys = { version = "^0.3", default-features = false }
wasm-bindgen-futures = { version = "^0.4", default-features = false }
