[package]
name = "translation_compare"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2021"

[lib]
doctest = false
crate-type = ["cdylib"]

[features]

[dependencies]
yew = { version = "0.19", default-features = false }
wasm-bindgen = { version = "^0.2", default-features = false }
wasm-bindgen-futures = { version = "^0.4", default-features = false }
web-sys = { version = "^0.3", default-features = false }
console_error_panic_hook = { version = "^0.1", default-features = false }
console_log = { version = "0.2", features = ["color"], default-features = false }
log = { version = "0.4", default-features = false }

sqpack = { version = "^0.1", default-features = false, git = "https://github.com/dlunch/sqpack" }
common = { version = "^0.1", path = "../common" }
ffxiv_parser = { version = "^0.1", path = "../../libs/ffxiv_parser" }
ffxiv_ex = { version = "^0.1", path = "../../libs/ffxiv_ex" }
util = { version = "^0.1", path = "../../libs/util" }

[dev-dependencies]
pretty_env_logger = { version = "^0.4", default-features = false }
wasm-bindgen-test = { version = "^0.3", default-features = false }
