[package]
name = "ffxiv-parser"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2018"

[lib]
doctest = false

[features]
default = ["sqpack"]
std = ["sqpack/std"]

[dependencies]
sqpack = { version = "^0.1", default-features = false, optional = true, path = "../sqpack" }

[dev-dependencies]
tokio = { version = "^0.2.11", features = ["macros", "rt-threaded"], default-features = false }
