[package]
name = "ffxiv_parser"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2018"

[lib]
doctest = false

[features]
default = ["std"]
std = ["sqpack_reader/std", "nom/std"]

[dependencies]
nom = { version = "^5.1", features = ["alloc"], default-features = false }
bytes = { version = "^0.5", default-features = false }
sqpack_reader = { version = "^0.1", default-features = false, path = "../sqpack_reader" }

[dev-dependencies]
tokio = { version = "^0.2.11", features = ["macros", "rt-threaded"], default-features = false }
