[package]
name = "ffxiv_parser"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2018"

[lib]
doctest = false

[features]
default = ["std"]
std = ["sqpack_reader/std", "nom/std"]

[dependencies]
nom = { version = "^5.1", features = ["alloc"], default-features = false }
enum-map = { version = "^0.6", default-features = false }
futures = {version = "^0.3", features = ["alloc"], default-features = false }
lazy_static = { version = "^1.4", features = ["spin_no_std"], default-features = false }
byteorder = { version = "^1.3", default-features = false }
sqpack_reader = { version = "^0.1", default-features = false, path = "../sqpack_reader" }

[dev-dependencies]
tokio = { version = "^0.2.11", features = ["macros", "rt-threaded"], default-features = false }
pretty_env_logger = { version = "^0.4", default-features = false }
log = { version = "^0.4", default-features = false }
