[package]
name = "sqpack_reader"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2018"

[lib]
doctest = false

[features]
default = ["std"]
std = ["nom/std", "crc32fast/std", "compression/std", "tokio", "async-trait", "reqwest/default-tls"]
test_local = ["default"]

[dependencies]
nom = { version = "^5.1", features = ["alloc"], default-features = false }
crc32fast = { version = "^1.2.0", default-features = false }
phf = { version = "^0.8.0", features = ["macros"], default-features = false }
compression = { version = "^0.1", features = ["deflate"], default-features = false }
bytes = { version = "^0.5", default-features = false }
num = { version = "^0.2", default-features = false }
log = { version = "^0.4", default-features = false }

tokio = { version = "^0.2.11", features = ["fs", "sync"], default-features = false, optional = true }
async-trait = { version = "^0.1.24", default-features = false, optional = true }
reqwest = { version = "^0.10", default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "^0.2.11", features = ["macros", "rt-threaded"], default-features = false }
pretty_env_logger = { version = "^0.4", default-features = false }
log = { version = "^0.4", default-features = false }
