[package]
name = "sqpack_reader"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2018"

[lib]
doctest = false

[features]
default = ["std"]
std = ["nom/std", "crc32fast/std", "compression/std", "tokio", "reqwest/default-tls", "util/std"]
test_local = ["default"]

[dependencies]
nom = { version = "^5.1", features = ["alloc"], default-features = false }
futures = {version = "^0.3", features = ["alloc"], default-features = false }
crc32fast = { version = "^1.2.0", default-features = false }
compression = { version = "^0.1", features = ["deflate"], default-features = false }
log = { version = "^0.4", default-features = false }
async-trait = { version = "^0.1.24", default-features = false }
util = { version = "^0.1", default-features = false, path = "../../util" }

tokio = { version = "^0.2.11", features = ["fs", "sync"], default-features = false, optional = true }
reqwest = { version = "^0.10", default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "^0.2.11", features = ["macros", "rt-threaded"], default-features = false }
pretty_env_logger = { version = "^0.4", default-features = false }
