[package]
name = "ffxiv_ex"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2018"

[lib]
doctest = false

[features]

[dependencies]
sqpack_reader = { version = "^0.1", default-features = false, path = "../sqpack_reader" }
ffxiv_parser = { version = "^0.1", default-features = false, path = "../ffxiv_parser" }

[dev-dependencies]
async-std = { version = "^1.6", features = ["attributes", "tokio02"] }
pretty_env_logger = { version = "^0.4", default-features = false }
log = { version = "^0.4", default-features = false }
