[package]
name = "ffxiv_ex"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2018"

[lib]
doctest = false

[features]

[dependencies]
log = { version = "^0.4", default-features = false }

sqpack = { version = "^0.1", default-features = false, git = "https://github.com/dlunch/sqpack" }
ffxiv_parser = { version = "^0.1", default-features = false, path = "../ffxiv_parser" }

[dev-dependencies]
async-std = { version = "^1.9", features = ["attributes", "tokio1"] }
pretty_env_logger = { version = "^0.4", default-features = false }
sqpack_extension = { version = "^0.1", default-features = false, path = "../sqpack_extension" }
