[package]
name = "ffxiv_model"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2018"

[lib]
doctest = false

[features]

[dependencies]
raw-window-handle = { version = "^0.3", default-features = false }
futures = { version = "^0.3", features = ["alloc"], default-features = false }
tokio = { version = "^0.2", features = ["sync"], default-features = false }
hashbrown = { version = "^0.7", features = ["ahash", "inline-more"], default-features = false }

sqpack_reader = { version = "^0.1", default-features = false, path = "../sqpack_reader" }
ffxiv_parser = { version = "^0.1", default-features = false, path = "../ffxiv_parser" }
renderer = { version = "^0.1", default-features = false, path = "../renderer" }

[build-dependencies]
shaderc = { version = "^0.6", default-features = false }