[package]
name = "ffxiv_parser"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2018"

[lib]
doctest = false

[features]
# test feature is workaround for cargo unifying feature in dev-dependency and dependency. (https://github.com/rust-lang/cargo/issues/7916)
test = ["sqpack/std"]

[dependencies]
futures = { version = "^0.3", features = ["alloc"], default-features = false }
serde = { version = "^1.0", features = ["derive", "alloc"], default-features = false }
serde_repr = { version = "^0.1", default-features = false }
hashbrown = { version = "^0.11", features = ["ahash", "inline-more"], default-features = false }
phf = { version = "^0.8", features = ["macros"], default-features = false }
log = { version = "^0.4", default-features = false }
nalgebra = { version = "^0.26", default-features = false }

sqpack = { version = "^0.1", default-features = false, git = "https://github.com/dlunch/sqpack" }
util = { version = "^0.1", default-features = false, path = "../util" }

[dev-dependencies]
async-std = { version = "^1.9", features = ["attributes", "tokio1"] }
pretty_env_logger = { version = "^0.4", default-features = false }
log = { version = "^0.4", default-features = false }
sqpack_extension = { version = "^0.1", default-features = false, path = "../sqpack_extension" }
