[package]
name = "ffxiv_renderer"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2018"

[lib]
doctest = false

[features]

[dependencies]
raw-window-handle = { version = "^0.3", default-features = false }
zerocopy = { version = "^0.3", default-features = false }

sqpack_reader = { version = "^0.1", default-features = false, path = "../sqpack_reader" }
ffxiv_parser = { version = "^0.1", default-features = false, path = "../ffxiv_parser" }
renderer = { version = "^0.1", default-features = false, path = "../renderer" }
