[package]
name = "havok_parser"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2018"

[lib]
doctest = false

[dependencies]
bitflags = { version = "^1.2", default-features = false }
log = { version = "^0.4", default-features = false }
hashbrown = { version = "^0.7", features = ["ahash", "inline-more"], default-features = false }

util = { version = "^0.1", default-features = false, path = "../util" }

[dev-dependencies]
async-std = { version = "^1.6", features = ["attributes"], default-features = false }
pretty_env_logger = { version = "^0.4", default-features = false }

ffxiv_parser = { version = "^0.1", default-features = false, path = "../ffxiv_parser" }
sqpack_reader = { version = "^0.1", features = ["std"], default-features = false, path = "../sqpack_reader"  }