[package]
name = "havok_parser"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2021"

[lib]
doctest = false

[dependencies]
bitflags = { version = "^1.2", default-features = false }
log = { version = "^0.4", default-features = false }
hashbrown = { version = "^0.11", features = ["ahash", "inline-more"], default-features = false }

util = { version = "^0.1", default-features = false, path = "../util" }

[dev-dependencies]
async-std = { version = "^1.6", features = ["attributes", "tokio1"], default-features = false }
pretty_env_logger = { version = "^0.4", default-features = false }

sqpack = { version = "^0.1", git = "https://github.com/dlunch/sqpack" }
ffxiv_parser = { version = "^0.1", default-features = false, path = "../ffxiv_parser" }
sqpack_extension = { version = "^0.1", default-features = false, path = "../sqpack_extension" }