[package]
name = "havok_parser"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2021"

[lib]
doctest = false

[dependencies]
bitflags = { version = "^1.2", default-features = false }
log = { version = "^0.4", default-features = false }
hashbrown = { version = "^0.12", features = ["ahash", "inline-more"], default-features = false }

util = { version = "^0.1", default-features = false, path = "../util" }

[dev-dependencies]
tokio = { version = "^1.13", features = ["full"] }
pretty_env_logger = { version = "^0.4" }

sqpack = { version = "^0.1", git = "https://github.com/dlunch/sqpack" }
ffxiv_parser = { version = "^0.1", path = "../ffxiv_parser" }
sqpack_extension = { version = "^0.1", path = "../sqpack_extension" }