[package]
name = "renderer"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2018"

[lib]
doctest = false

[dependencies]
futures = { version = "^0.3", features = ["async-await"], default-features = false }
tokio = { version = "^0.2.11", features = ["sync"], default-features = false }
wgpu = { version = "^0.5", default-features = false }
zerocopy = { version = "^0.3", default-features = false }
nalgebra = { version = "^0.21", default-features = false }
squish = { version = "^1", default-features = false }
raw-window-handle = { version = "^0.3", default-features = false }