[package]
name = "sqpack_extension"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2021"

[lib]
doctest = false

[features]
default = []
std = ["sqpack/std", "tokio"]

[dependencies]
cfg-if = { version = "^1.0", default-features = false }
futures = {version = "^0.3", features = ["alloc"], default-features = false }
log = { version = "^0.4", default-features = false }
async-trait = { version = "^0.1.24", default-features = false }
bytes = { version = "^1.0", default-features = false }
hashbrown = { version = "^0.12", features = ["ahash", "inline-more"], default-features = false }
spinning_top = { version = "^0.2", default-features = false }

sqpack = { version = "^0.1", default-features = false, git = "https://github.com/dlunch/sqpack" }
util = { version = "^0.1", default-features = false, path = "../util" }

tokio = { version = "^1.13", features = ["full"], optional = true }

[dev-dependencies]
pretty_env_logger = { version = "^0.4" }
tokio = { version = "^1.13", features = ["full"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "^0.11", features = ["default-tls", "stream"], default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "^0.3" }
wasm-bindgen = { version = "^0.2" }
wasm-bindgen-futures = { version = "^0.4" }
web-sys = { version = "^0.3", features = ["Headers", "Request", "RequestInit", "RequestMode", "Response", "Window"] }