[package]
name = "sqpack_reader"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2018"

[lib]
doctest = false

[features]
default = []
std = ["crc32fast/std", "async-std", "util/std"]
test_local = ["std"]

[dependencies]
cfg-if = { version = "^0.1", default-features = false }
futures = {version = "^0.3", features = ["alloc"], default-features = false }
crc32fast = { version = "^1.2.0", default-features = false }
miniz_oxide = { version = "^0.3", default-features = false }
log = { version = "^0.4", default-features = false }
async-trait = { version = "^0.1.24", default-features = false }
bytes = { version = "^0.5.4", default-features = false }
hashbrown = { version = "^0.7", features = ["ahash", "inline-more"], default-features = false }
spinning_top = { version = "^0.1", default-features = false }

util = { version = "^0.1", default-features = false, path = "../util" }

async-std = { version = "^1.6", optional = true }

[dev-dependencies]
pretty_env_logger = { version = "^0.4", default-features = false }
async-std = { version = "^1.6", features = ["attributes", "alloc"], default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "^0.10", features = ["default-tls", "stream"], default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "^0.3" }
wasm-bindgen = { version = "^0.2" }
wasm-bindgen-futures = { version = "^0.4" }
web-sys = { version = "^0.3", features = ["Headers", "Request", "RequestInit", "RequestMode", "Response", "Window"] }